# spec-kit

./: .dockerignore  .env.example  .env.staging  .gitignore  .gitmodules  AGENTS.md  APPROACH.md  CHANGELOG.md  CONSTITUTION.md  CONTRIBUTING.md  Cargo.toml  Makefile  ORCHESTRATOR.md  README.md  package-lock.json  package.json  plugin-policy-and-orchestrator-addendum.md  spec-kit-orchestrator-setup-v2.md  turbo.json
.github/workflows/: deploy.yml  orchestrator-ci.yaml
apps/ai_resume_builder/: .env.example  AI_Resume_Assistant_Business_Plan.md  AI_Resume_Assistant_Business_Plan_Web.md  AI_Resume_Assistant_Product_Spec.md  AI_Resume_Assistant_Product_Spec_Web.md  package.json  package.json.bak  package.json.tmp  setup_docker_pkg.sh  tailwind.config.js  vitest.config.ts
apps/web/: eslint.config.js  package.json  tsconfig.json  tsconfig.tsbuildinfo
ci/: run_phase_checks.sh
docs/: deployment.md
docs/adr/: 001-model-picker-and-drive.md
docs/changelog/: v0.2.0.md
infra/compose/: .env.example  compose.prod.yaml  compose.staging.yaml  docker-compose.yml
monitoring/: prometheus.yml
orchestrator/: plugins.policy.md  plugins.runtime.sh
plans/: README.md
reports/: README.md
rust/resume_svc/intel-svc/: Cargo.toml
rust/resume_svc/intel-svc/src/: main.rs
schemas/: company_dossier.schema.json  compose_request.schema.json  compose_response.schema.json  user_manifest.schema.json
scripts/: audit-js.sh  audit-python.sh  audit-rust.sh  deploy.sh  generate-compliance-report.sh  generate-threat-model.sh  merge-audits.sh  python-unit-help.sh
tmp-ci/: README.md
(+48 files in other folders)
